options/options.css
@charset "UTF-8";

#link_filter_javascript, #image_filter_javascript {
    height: 50px;
}

#link_request_javascript {
    height: 75px;
}
#link_parse_javascript, #image_parse_javascript {
    height: 200px;
}

#modify_headers_json {
    height: 75px;
}


::-moz-range-thumb {
    border-radius: 2px;
    height: 15px;
    width: 8px;
}
::-moz-selection {
    background: #adf;
}
::selection {
    background: #adf;
}
::-moz-focus-inner {
    border: 0;
}
:focus {
    outline: none;
}
html {
    background-color: #f3f3f5;
    cursor: default;
    min-height: 100%;
}
body {
    background-color: #fff;
    border-top: 0;
    box-shadow: 0 0 4px #333;
    /* font: 13px Lucida Grande, Lucida Sans Unicode, Tahoma, sans-serif; */
    font: 13px / 150% Verdana, Lucida Grande, Lucida Sans Unicode, Tahoma, sans-serif;
    margin: 0 auto;
    min-width: 700px;
    min-height: 300px;
    padding: 6px 15px 10px;
    position: relative;
    box-sizing: border-box;
    width: min-content;
    min-height: 310px;
}
h4 {
    margin: 24px 0 10px;
}
a {
    color: #1155ef;
    text-decoration: none;
    cursor: pointer;
}
a:hover {
    color: #000;
}
.bold {
    font-weight: 700 !important;
}
.fn {
    float: none;
}
.cur_zmin {
    cursor: zoom-in;
    text-decoration: underline 1px dotted black;
}
.cf:after {
    clear: both;
    content: "";
    display: block;
}
#app_version {
    display: block;
    padding-top: 5px;
}
#importer {
    background-image: linear-gradient(180deg, #fff, rgba(245, 245, 255));
    box-shadow: 0 0 5px #666;
    box-sizing: border-box;
    display: none;
    left: 0;
    padding: 0 10px 10px;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 10;
}
#importer > b {
    border-radius: 10px;
    float: right;
    height: 20px;
    margin-top: 10px;
    text-align: center;
    transition: text-shadow 0.3s;
    width: 20px;
}
#importer > b:hover {
    cursor: pointer;
    text-shadow: 0 0 10px #000;
}
#importer > h3 {
    display: inline-block;
}
#importer > .op_buttons {
    padding: 10px 0 0;
    text-align: center;
}
#importer .file_button,
#importer > .op_buttons > button {
    margin: 0;
    padding-left: 20px;
    padding-right: 20px;
    width: auto;
}
#importer > .op_buttons > div {
    display: inline-block;
    margin-left: 10px;
    text-align: left;
    vertical-align: middle;
}
#importer > textarea {
    height: 185px;
    margin: 10px 0 7px;
}
#importer input:checked + label + label {
    color: red;
}
.hint {
    color: #999;
}
hr {
    border: 1px solid #bbb;
    margin: 10px 0;
}
#sieve_sec hr {
    border-color: #ddd;
    border-bottom: none;
}
#right_panel {
    left: 100%;
    position: absolute;
    top: 0;
}
#right_panel > aside {
    background-color: hsla(0, 0%, 100%, 0.8);
    box-shadow: 2px 2px 2px #aaa;
    overflow: hidden;
    padding: 0 5px 3px 8px;
    position: fixed;
    text-align: center;
    top: 0;
}
#right_panel > aside,
section {
    box-sizing: border-box;
}
#app_installed,
#app_updated,
.advanced,
.hidden {
    display: none;
}
#right_panel > aside > .advanced,
body.advanced .advanced {
    color: #4a6b75;
    display: block;
}
.advanced > label {
    vertical-align: middle;
}
body > section {
    display: none;
    position: relative;
}
nav {
    margin-bottom: 20px;
    text-align: center;
}
nav > a {
    border-bottom: 3px solid transparent;
    color: #1155ef;
    display: inline-block;
    padding: 5px 6px;
    text-decoration: none;
    transition: border-bottom-color 0.5s;
}
nav > a:hover {
    border-bottom: 3px solid #aaf;
    color: #000;
    transition: border-bottom-color 0s;
}
nav > .active {
    border-bottom: 3px solid #000;
    color: #000;
}
.prow,
.tiptop {
    position: relative;
}
.tip {
    border: 1px solid transparent;
    color: transparent;
    font: 12px/150% Verdana, sans-serif;
    height: 25px;
    left: -48px;
    max-width: 100%;
    opacity: 0;
    overflow: hidden;
    padding: 5px 7px;
    position: absolute;
    top: -5px;
    transition: visibility 0s 0.5s, opacity 0.5s, color 0.7s;
    visibility: hidden;
    white-space: pre-line;
    width: 33px;
    z-index: 1;
}
.tiptop:hover > .tip:not(:empty),
.tipvis > .tip:not(:empty) {
    opacity: 1;
    transition-delay: 0s;
    visibility: visible;
}
.tip:hover {
    background-color: rgba(245, 245, 255, 0.9);
    background-image: linear-gradient(180deg, #fff, #fafafa);
    border: 1px solid #ddd;
    border-left: none;
    border-radius: 6px;
    box-shadow: 0 0 10px #dedede;
    color: #000;
    height: auto;
    left: -45px;
    overflow: visible;
    padding: 10px 10px 10px 40px;
    width: auto;
}
.tip:before {
    border-left: 2px solid #b97070;
    border-radius: 5px 0 0 5px;
    border-right: none;
    color: #fff;
    content: "?";
    display: inline-block;
    font: 700 17px Verdana, sans-serif;
    margin-right: 20px;
    padding: 3px 6px 4px;
    text-align: center;
    text-shadow: 0 0 3px #000, 0 0 3px #000;
}
.tip:hover:before {
    left: 5px;
    position: absolute;
    top: 5px;
}
.prow > label,
.prow > span:not(.clean) {
    box-sizing: border-box;
    display: inline-block;
    line-height: 18px;
}
.prow.left {
    justify-content: flex-start;
    margin-left: 30px;
}

.prow.left > label {
    margin-left: 4px;
}
form .prow:not(.advanced),
body.advanced form .advanced {
    display: flex;
}
.prow {
    justify-content: space-between;
    padding: 4px 6px;
    align-items: center;
    border-radius: 4px;
}
.prow.wrap {
    flex-wrap: wrap;
}
.prow:hover {
    background-color: #f0f8ff;
}
.prow > span:not(.clean) {
    float: right;
    text-align: right;
}
.prow input[type="text"] {
    width: 300px;
}
.prow select {
    max-width: 308px;
    text-transform: lowercase;
}
.prow input[type="color"] + input[type="text"],
.shorter_input {
    vertical-align: middle;
    width: 242px;
}
.prowone > label,
.prowone > span {
    padding: 2px 0;
    width: auto !important;
}
.inp_tf_short {
    width: 100px !important;
}
/* ... */

